feat: update info

--- a/index.html
+++ b/index.html
@@ -26,6 +26,71 @@
       </div>
     </header>
     <main class="main">
+      <div class="sub-column column">
+        <section class="section contacts">
+          <h2 class="contacts__heading heading heading--dark">Contacts</h2>
+          <div class="contacts__content-wrapper content-wrapper">
+            <dl class="contacts__list">
+              <dt>Location</dt>
+              <dd>Be'er Sheva, Israel</dd>
+              <dt>Phone</dt>
+              <dd><a href="tel:+972545649764">+972 54-5649764</a></dd>
+              <dt>Email</dt>
+              <dd><a href="mailto:thelastandrew@gmail.com">thelastandrew@gmail.com</a></dd>
+              <dt>LinkedIn</dt>
+              <dd><a href="https://www.linkedin.com/in/andrey-nikitinski/" target="_blank">Andrey Nikitinski</a></dd>
+              <dt>Telegram</dt>
+              <dd><a href="https://t.me/thelastandrew" target="_blank" rel="author">@thelastandrew</a></dd>
+              <dt>GitHub</dt>
+              <dd><a href="https://github.com/thelastandrew" target="_blank">thelastandrew</a></dd>
+            </dl>
+          </div>
+        </section>
+        <section class="section languages">
+          <h2 class="languages__heading heading heading--dark">Languages</h2>
+          <div class="languages__content-wrapper content-wrapper">
+            <dl>
+              <dt>English</dt>
+              <dd>Intermediate / Advanced</dd>
+              <dt>Russian</dt>
+              <dd>Native</dd>
+            </dl>
+          </div>
+        </section>
+        <section class="section education">
+          <h2 class="edication__heading heading heading--dark">Education</h2>
+          <div class="education__content-wrapper content-wrapper">
+            <dl class="education__list">
+              <dt><a href="https://rs.school/js-stage0/" target="_blank">RS School (JS/FE Pre-School)</a></dt>
+              <dd>
+                <p>Dec 2021 - March 2022</p>
+                <p><a href="https://app.rs.school/certificate/p01p5n3e" target="_blank">Certificate</a></p>
+              </dd>
+              <dt><a href="https://rs.school/js/" target="_blank">RS School (JS/FE)</a></dt>
+              <dd>
+                <p>March 2022 - September 2022</p>
+                <p><a href="https://app.rs.school/certificate/gpux7mzx" target="_blank">Certificate</a></p>
+              </dd>
+              <dt>Perm State Technical University</dt>
+              <dd>
+                <p>September 2006 - June 2011</p>
+                <p>Measuring and computing complexes of aircraft</p>
+              </dd>
+            </dl>
+          </div>
+        </section>
+        <section class="section soft-skills">
+          <h2 class="soft-skills__heading heading heading--dark">Soft Skills</h2>
+          <div class="soft-skills__content-wrapper content-wrapper">
+            <ul class="soft-skills__list">
+              <li>Problem-solving</li>
+              <li>Communicative</li>
+              <li>Emotional intelligence</li>
+              <li>Data analytics</li>
+            </ul>
+          </div>
+        </section>
+      </div>
       <div class="main-column column">
         <section class="section about">
           <h2 class="about__heading heading heading--light">About me</h2>
@@ -37,50 +102,35 @@
         </section>
         <section class="section skills">
           <h2 class="skills__heading heading heading--light">Skills</h2>
-          <div class="skills__content-wrapper content-wrapper">
-            <div class="skills__skill skill js">
+          <ul class="skills__content-wrapper content-wrapper">
+            <li class="skills__skill skill">
               <h3 class="skill__skill-name">JavaScript (ES6)</h3>
-              <div class="skill__progress-bar progress-bar">
-                <div class="progress-bar__progress"></div>
-              </div>
-            </div>
-            <div class="skills__skill skill ts">
-              <h3 class="skill__skill-name">TypeScript</h3>
-              <div class="skill__progress-bar progress-bar">
-                <div class="progress-bar__progress"></div>
-              </div>
-            </div>
-            <div class="skills__skill skill react">
+            </li>
+            <li class="skills__skill skill">
               <h3 class="skill__skill-name">React</h3>
-              <div class="skill__progress-bar progress-bar">
-                <div class="progress-bar__progress"></div>
-              </div>
-            </div>
-            <div class="skills__skill skill html">
+            </li>
+            <li class="skills__skill skill">
+              <h3 class="skill__skill-name">Git/GitHub</h3>
+            </li>
+            <li class="skills__skill skill">
               <h3 class="skill__skill-name">HTML 5</h3>
-              <div class="skill__progress-bar progress-bar">
-                <div class="progress-bar__progress"></div>
-              </div>
-            </div>
-            <div class="skills__skill skill css">
-              <h3 class="skill__skill-name">CSS 3 / Sass (Scss)</h3>
-              <div class="skill__progress-bar progress-bar">
-                <div class="progress-bar__progress"></div>
-              </div>
-            </div>
-            <div class="skills__skill skill git">
-              <h3 class="skill__skill-name">Git / GitHub</h3>
-              <div class="skill__progress-bar progress-bar">
-                <div class="progress-bar__progress"></div>
-              </div>
-            </div>
-            <div class="skills__skill skill webpack">
+            </li>
+            <li class="skills__skill skill">
+              <h3 class="skill__skill-name">Redux</h3>
+            </li>
+            <li class="skills__skill skill">
               <h3 class="skill__skill-name">Webpack</h3>
-              <div class="skill__progress-bar progress-bar">
-                <div class="progress-bar__progress"></div>
-              </div>
-            </div>
-          </div>
+            </li>
+            <li class="skills__skill skill">
+              <h3 class="skill__skill-name">CSS 3</h3>
+            </li>
+            <li class="skills__skill skill">
+              <h3 class="skill__skill-name">TypeScript</h3>
+            </li>
+            <li class="skills__skill skill">
+              <h3 class="skill__skill-name">Node.js</h3>
+            </li>
+          </ul>
         </section>
         <section class="section projects">
           <h2 class="projects__heaeding heading heading--light">Projects</h2>
@@ -121,64 +171,16 @@
             </ul>
           </div>
         </section>
-      </div>
-      <div class="sub-column column">
-        <section class="section contacts">
-          <h2 class="contacts__heading heading heading--dark">Contacts</h2>
-          <div class="contacts__content-wrapper content-wrapper">
-            <dl class="contacts__list">
-              <dt>Location</dt>
-              <dd>Be'er Sheva, Israel</dd>
-              <dt>Phone</dt>
-              <dd><a href="tel:+972545649764">+972 54-5649764</a></dd>
-              <dt>Email</dt>
-              <dd><a href="mailto:thelastandrew@gmail.com">thelastandrew@gmail.com</a></dd>
-              <dt>LinkedIn</dt>
-              <dd><a href="https://www.linkedin.com/in/andrey-nikitinski/" target="_blank">Andrey Nikitinski</a></dd>
-              <dt>Telegram</dt>
-              <dd><a href="https://t.me/thelastandrew" target="_blank" rel="author">@thelastandrew</a></dd>
-              <dt>GitHub</dt>
-              <dd><a href="https://github.com/thelastandrew" target="_blank">thelastandrew</a></dd>
-            </dl>
-          </div>
-        </section>
-        <section class="section education">
-          <h2 class="edication__heading heading heading--dark">Education</h2>
-          <div class="education__content-wrapper content-wrapper">
-            <dl class="education__list">
-              <dt><a href="https://rs.school/js-stage0/" target="_blank">RS School (JS/FE Pre-School)</a></dt>
-              <dd>
-                <p>Dec 2021 - March 2022</p>
-                <p><a href="https://app.rs.school/certificate/p01p5n3e" target="_blank">Certificate</a></p>
-              </dd>
-              <dt><a href="https://rs.school/js/" target="_blank">RS School (JS/FE)</a></dt>
-              <dd>
-                <p>March 2022 - September 2022</p>
-                <p><a href="https://app.rs.school/certificate/gpux7mzx" target="_blank">Certificate</a></p>
-              </dd>
-            </dl>
-          </div>
-        </section>
-        <section class="section soft-skills">
-          <h2 class="soft-skills__heading heading heading--dark">Soft Skills</h2>
-          <div class="soft-skills__content-wrapper content-wrapper">
-            <ul class="soft-skills__list">
-              <li>Hard working</li>
-              <li>Communicable</li>
-              <li>Curious</li>
-              <li>No bad habits</li>
+        <section class="section experience">
+          <h2 class="experience__heaeding heading heading--light">Experience</h2>
+          <div class="experience__content-wrapper content-wrapper">
+            <h3>Furniture constructor (2013 - present)</h3>
+            <p>Achievements:</p>
+            <ul>
+              <li>Stress proof</li>
+              <li>Customer oriented</li>
+              <li>Attentive to the details</li>
             </ul>
-          </div>
-        </section>
-        <section class="section languages">
-          <h2 class="languages__heading heading heading--dark">Languages</h2>
-          <div class="languages__content-wrapper content-wrapper">
-            <dl>
-              <dt>Russian</dt>
-              <dd>Native</dd>
-              <dt>English</dt>
-              <dd>Intermediate / Advanced</dd>
-            </dl>
           </div>
         </section>
       </div>
