feat: add pront version

--- a/index.html
+++ b/index.html
@@ -183,6 +183,10 @@
             </ul>
           </div>
         </section>
+        <div class="qr">
+          <p>Check my up-to-date CV here:</p>
+          <img src="./assets/png/qrcode.png" alt="qr-code"/>
+        </div>
       </div>
     </main>
   </div>
